src/objects/Live_Call_Object__c.object
<CustomObject>
    <fields>
        <fullName>Cogito_User_ID__c</fullName>
        <label>Cogito User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuous_speaking_count__c</fullName>
        <label>Continuous speaking count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Cx_Score__c</fullName>
        <label>Current Cx Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empathy_Cue_Count__c</fullName>
        <label>Empathy Cue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_cue_count__c</fullName>
        <label>Energy cue count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_overlap_count__c</fullName>
        <label>Extended overlap count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_silence_count__c</fullName>
        <label>Extended silence count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Empathy_Cue_Displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Empathy Cue Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_continuous_speaking_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is continuous speaking displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_energy_cue_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is energy cue displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_extended_overlap_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is extended overlap displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_extended_silence_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is extended silence displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_slow_to_respond_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is slow to respond displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_speaking_quickly_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is speaking quickly displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_speaking_slowly_displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is speaking slowly displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Word_Count__c</fullName>
        <label>Key Word Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Word_Displayed__c</fullName>
        <label>Key Word Displayed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slow_To_Respond_Count__c</fullName>
        <label>Slow To Respond Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaking_quickly_count__c</fullName>
        <label>Speaking quickly count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaking_slowly_count__c</fullName>
        <label>Speaking slowly count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Live Call Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Live Call Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Call Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>